--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -142,7 +142,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:text="New User? Sign Up"
-        android:textColor="#000"
+        android:textColor="#2196F3"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
