--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -83,7 +83,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
         android:text="Already Sign in? Login"
-        android:textColor="#000"
+        android:textColor="#2196F3"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
